Thu Mar  3 21:21:42 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (test_execopts_redirect): redirecting fd
	  >= 3 is not supported on Windows, so should not specify such options
	  when calling spawn or others.

Thu Mar  3 18:59:04 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_slice_bang): raise error when the string is frozen.

Thu Mar  3 14:25:19 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* strftime.c (STRFTIME): return 0 and ERANGE when precision is too
	  large. [ruby-dev:43284] fixes #4456

Thu Mar  3 00:46:51 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (uleb128): cast the value to unsigned long.

	* addr2line.c (fill_lines): print error when lseek fails.

Thu Mar  3 00:36:29 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rexml/encoding.rb (REXML::Encoding#encoding=): store @encoding
	  a String which means the name of the encoding.
	  this partially revert r29646.

	* lib/rexml/document.rb: follow above.

	* lib/rexml/output.rb: ditto.

	* lib/rexml/parsers/baseparser.rb: ditto.

	* lib/rexml/source.rb: ditto.

	* lib/rexml/xmldecl.rb: ditto.

Wed Mar  2 23:19:56 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_byte_substr): return nil for negative length.

Wed Mar  2 21:15:00 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_pkey_dh.c: parenthesize macro arguments.

Wed Mar  2 14:24:04 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit/parallel.rb: Fix name from `inclement_io` to
	  `increment_io`.

Wed Mar  2 14:06:01 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_slice_bang): move treatments which is only needed
	  when the result is not nil.

Wed Mar  2 14:02:29 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/testunit/test_parallel.rb(TestParallel#spawn_runner):
	  Fix outputing empty line in running test.

	* test/testunit/tests_for_parallel/test_third.rb: Remove `sleep`

Tue Mar  1 22:29:10 2011  Tanaka Akira  <akr@fsij.org>
